--- a/estudio.html
+++ b/estudio.html
@@ -5,43 +5,74 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudio Jurídico AM</title>
-    <link rel="icon" href="Imagenes/20210915_212648_0000_preview_rev_1.png">
-    <link rel="stylesheet" href="estilosestudio.css">
+    <link rel="icon" href="Imagenes/LOGO-removebg-preview.png">
+    <link rel="stylesheet" href="https://unpkg.com/jam-icons/css/jam.min.css">
+    <link rel="stylesheet" href="css/estilosestudio.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&family=Roboto&display=swap');
+        </style>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&family=Roboto&display=swap');
+            </style>
 </head>
 <body>
-    <Header>
-        <img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" controls height="50" alt="">
-        <h1 class="estudiojuridico">Estudio Jurídico</h1>
-        <h2 class="AM">AM</h2>
-        <div>
-            <nav>
-                <a href="index.html">INICIO</a>
-                <a href="estudio.html">ESTUDIO</a>
-                <a href="servicios.html">SERVICIOS</a>
-                <a href="contacto.html">CONTACTO</a>
-            </nav> <!--PANEL DE NEVAGACIÓN-->
+    <header>
+        <div class="encabezado">
+            <div class="logo_nombre">
+                <a class="nav" href="index.html"><img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" height="43px" width="51px" alt=""></a>
+                <a class="nav" href="index.html"> <span class="nombre_sitio">ESTUDIO JURÍDICO AM</span></a>
+            </div>
+            <div class="panel_nav">
+                <nav>
+                    <ul>
+                        <li><a class="nav" href="index.html">INICIO</a></li>
+                       <li><a class="nav" href="estudio.html">EL ESTUDIO</a></li>
+                       <li><a class="nav" href="servicios.html">SERVICIOS</a></li>
+                       <li><a class="nav" href="contacto.html">CONTACTO</a></li>
+                   </ul>
+               </nav>
+            </div>
         </div>
-     </Header><!--CABECERA-->
-    <h1 class="elestudio">EL ESTUDIO</h1>
-    <img class="logoAM" src="Imagenes/20210915_212648_0000_preview_rev_1.png"controls height="200cm" width="250cm" alt="">
-        <p class="presentacionestudio">El Estudio Jurídico AM ofrece una atención amable y asesoramiento personalizado 
-           en derecho de familia y sucesiones, según las necesidades de cada cliente.</p>
-    <img class="abogada" src="Imagenes/oficina.jpg" controls height="300cm" width="400cm" alt="">
-    <h2 class="andrea">Dra. Andrea Paola Mansilla</h2>
-        <p class="presentacion">Abogada egresada de la Universidad de la Patagonia San Juan Bosco con matrícula 
-           C1255 del Colegio Público de Abogados de Comodoro Rivadavia.</p>
-           <footer>
-            <h3 class="visitanos">VISITANOS</h3>
-            <h3 class="llamanos">LLAMANOS</h3>
-            <h3 class="contactanos">CONTACTANOS</h3>
-            <p class="direccion">Ramos Mejía 191, Comodoro Rivadavia,Chubut</p>
-            <p class="celular"> (297) 422-9206</p>
-            <p> <ul class="redes">
-                <li>Instagram </li>
-                <li>Facebook</li>
-                <li>Linkedin</li>
-            </ul>
-            </p>
-        </footer> 
+    </header>
+     <main>
+        <h1 class="elestudio">EL ESTUDIO</h1>
+         <section class="seccion">
+             <div class="estudio">
+                <p>El Estudio Jurídico AM ofrece una atención amable y asesoramiento personalizado 
+                    en derecho de familia y sucesiones, siguiendo las necesidades de cada cliente.</p>
+                <h2 class="dra">Dra. Andrea Paola Mansilla</h2>
+                 <p>Abogada egresada de la Universidad de la Patagonia San Juan Bosco con matrícula 
+                    C1255 del Colegio Público de Abogados de Comodoro Rivadavia.</p>
+             </div>
+             <div class="imagen">
+                <img class="abogada" src="Imagenes/abogada.jpg" height="330px" width="500px" alt="">
+             </div>
+         </section>
+     </main>
+    <footer>
+        <div class="container_footer">
+            <div class="box_footer1">
+                <h2 class="titulo">Estudio Jurídico AM</h2>
+                <div>
+                    <ul class="navegacion">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="estudio.html">El Estudio</a></li>
+                        <li><a href="servicios.html">Servicios</a></li>
+                        <li></li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box_footer2">
+                <h2 class="titulo">Compartir en</h2>
+                <div class="redes">
+                    <a href="" span class="jam jam-facebook facebook"></span></a>
+                    <a href="" span class="jam jam-twitter twitter"></span></a>
+                    <a href="" span class="jam jam-instagram instagram"></span></a>
+                    <a href="" span class="jam jam-linkedin linkedin"></span></a>
+                    <a href="" span class="jam jam-whatsapp whatsapp"></span></a>    
+                </div>
+            </div>
+        </div>        
+    </footer> 
 </body>
 </html>
