--- a/contacto.html
+++ b/contacto.html
@@ -5,71 +5,134 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudio Jurídico AM</title>
-    <link rel="stylesheet" href="estiloscontacto.css">
-    <link rel="icon" href="Imagenes/20210915_212648_0000_preview_rev_1.png">
-</head>
-<body>
-<Header>
-    <img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" controls height="50" alt="">
-        <h1 class="estudiojuridico">Estudio Jurídico</a></h1>
-        <h2 class="AM">AM</h2>
-    <nav>
-            <a href="index.html">INICIO</a>
-            <a href="estudio.html">ESTUDIO</a>
-            <a href="servicios.html">SERVICIOS</a>
-            <a href="contacto.html">CONTACTO</a>
-    </nav>
-</Header>
-<main>
-<h1 class="contacto">CONTACTO</h1>
-<h2 class="mensaje">Envía tu consulta</h2>
-<p class="comentarios"> Para preguntas o comentarios por favor llámanos o completa el formulario a continuación:</p>
-<form action=""></form>
-    <div>
-    <label class="labelnombre" for="Nombre">Nombre:</label>
-    <input class= "inputnombre" type="text" name="Nombre" id="Nombre">
-    </div>
-    <div>
-    <label class="labelasunto" for="Asunto">Asunto:</label>
-    <input class="inputasunto" type="text" name="Asunto" id="Asunto">
-    </div>
-    <div>
-     <label class="labeltelefono"for="telefono">Teléfono:</label>
-    <input class="inputtelefono" type="text" name="teléfono" id="teléfono">
-    </div>
-    <div>
-    <label class="labelemail" for="email">Email:</label>
-    <input class="inputemail" type="text" name="email" id="email">
-     </div>
-    <div>
-    <label class="labelmsj" for="mensaje">Mensaje:</label>
-    <input class="inputmsj" type="text" name="mensaje" id="mensaje">
-     </div>
-</main>
-<aside>
-    <h2>Oficina</h2>
-    <h3>Dirección</h3>
-    <p>Ramos Mejía 191, Comodoro Rivadavia, Argentina</p>
-    <h3>Email</h3>
-    <p>andreapmansilla@gmail.com</p>
-    <h3>Celular</h3>
-    <p>(297) 422 9206 </p>
-    <h3>Atención de consultas</h3>
-    <p>Lunes a Viernes de 9 a 17 hs (con cita previa)</p>
-</aside>
-<iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d8844.09536972661!2d-67.50496997327176!3d-45.87276739807178!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbde454ee7128d4eb%3A0xe9da7b224baf1ec3!2sRamos%20Mej%C3%ADa%20191%2C%20U9000BSC%20Comodoro%20Rivadavia%2C%20Chubut!5e0!3m2!1ses!2sar!4v1632233551003!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-<footer>
-    <h3 class="visitanos">VISITANOS</h3>
-    <h3 class="llamanos">LLAMANOS</h3>
-    <h3 class="contactanos">CONTACTANOS</h3>
-    <p class="direccion">Ramos Mejía 191, Comodoro Rivadavia,Chubut</p>
-    <p class="celular"> (297) 422-9206</p>
-    <p> <ul class="redes">
-        <li>Instagram </li>
-        <li>Facebook</li>
-        <li>Linkedin</li>
-    </ul>
-    </p>
-</footer> 
+    <link rel="stylesheet" href="css/estiloscontacto.css">
+    <link rel="icon" href="Imagenes/LOGO-removebg-preview.png">
+    <link rel="stylesheet" href="css/estilosindex.css">
+    <link rel="stylesheet" href="https://unpkg.com/jam-icons/css/jam.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&family=Roboto&display=swap');
+        </style>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&family=Roboto&display=swap');
+            </style>
+    <body>
+        <header>
+            <div class="encabezado">
+                <div class="logo_nombre">
+                    <a class="nav" href="index.html"><img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" height="43px" width="51px" alt=""></a>
+                    <a class="nav" href="index.html"> <span class="nombre_sitio">ESTUDIO JURÍDICO AM</span></a>
+                </div>
+                <div class="panel_nav">
+                    <nav>
+                        <ul>
+                            <li><a class="nav" href="index.html">INICIO</a></li>
+                           <li><a class="nav" href="estudio.html">EL ESTUDIO</a></li>
+                           <li><a class="nav" href="servicios.html">SERVICIOS</a></li>
+                           <li><a class="nav" href="contacto.html">CONTACTO</a></li>
+                       </ul>
+                   </nav>
+                </div>
+            </div>
+        </header>
+    <main>
+        <h1 class="contacto">CONTACTO</h1>
+        <section class="contacto_formulario">
+            <div class="formulario">
+                <h2 class="consulta">Envía tu consulta</h2>
+                <p class="comentarios"> Para preguntas o comentarios por favor llámanos o completa el formulario a continuación:</p>
+                <form action="validar.php" method="post">
+                    <div>
+                        <label for="Nombre"></label> 
+                        <input class="textos" type="text" required="" name="Nombre" id="Nombre" placeholder="Nombre*">
+                    </div>
+                    <div>
+                        <label for="Apellido"></label>
+                        <input class="textos" type="text" required="" name="Apellido" id="Apellido" placeholder="Apellido*">
+                    </div>
+                    <div>
+                        <label  for="Asunto"></label>
+                        <input class="textos" type="text" required="" name="Asunto" id="Asunto" placeholder="Asunto*">
+                    </div>
+                    <div>
+                        <label for="Telefono"></label>
+                        <input class="textos" type="number" name="Telefono" id="Telefono" placeholder="Teléfono">
+                    </div>
+                    <div>
+                        <label for="Email"></label>
+                        <input class="textos" type="email" required="" name="Email" id="Email" placeholder="Email*">
+                    </div>
+                    <div>
+                        <label class="items" for="Mensaje"></label>
+                        <textarea class="mensaje" required="" name="Mensaje" id="Mensaje" placeholder="Mensaje*" cols="30" rows="10"></textarea>
+                    </div>
+                    <div class="botones">
+                        <input class="boton" type="reset" value="Borrar">
+                        <input class="boton" type="submit" value="Enviar">
+                    </div>
+                </form>
+            </div>  
+        
+            <div class="datos_contacto">
+                <h2 class="oficina">Oficina</h2>
+                <div class="direccion">
+                    <span class="jam jam-map-marker-f direccion_icono"></span>
+                    <div class="direccion_texto">
+                        <h3>Dirección</h3>
+                        <p>Ramos Mejía 191, Comodoro Rivadavia, Argentina</p>
+                    </div>
+                </div>
+                <div class="direccion">
+                    <span class="jam jam-envelope-f email_icono"></span>
+                    <div class="direccion_texto">
+                        <h3>Email</h3>
+                        <p>andreapmansilla@gmail.com</p>
+                    </div>
+                </div>
+                <div class="direccion">
+                    <span class="jam jam-whatsapp cel_icono"></span>
+                    <div class="direccion_texto">
+                        <h3>Celular</h3>
+                        <p>(0297) 154229206 </p>
+                    </div>
+                </div>
+                <div class="direccion">
+                    <span class="jam jam-clock-f horario_icono"></span>
+                    <div class="direccion_texto">
+                        <h3>Atención de consultas</h3>
+                        <p>Lunes a Viernes de 9 a 17 hs (con cita previa)</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2777.909085538405!2d-67.50268568442876!3d-45.87312847910791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbde454ee7128d4eb%3A0xe9da7b224baf1ec3!2sRamos%20Mej%C3%ADa%20191%2C%20U9000BSC%20Comodoro%20Rivadavia%2C%20Chubut!5e0!3m2!1ses!2sar!4v1632853465918!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>      
+        </section>
+    </main>
+    <footer>
+        <div class="container_footer">
+            <div class="box_footer1">
+                <h2 class="titulo">Estudio Jurídico AM</h2>
+                <div>
+                    <ul class="navegacion">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="estudio.html">El Estudio</a></li>
+                        <li><a href="servicios.html">Servicios</a></li>
+                        <li></li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box_footer2">
+                <h2 class="titulo">Compartir en</h2>
+                <div class="redes">
+                    <a href="" span class="jam jam-facebook facebook"></span></a>
+                    <a href="" span class="jam jam-twitter twitter"></span></a>
+                    <a href="" span class="jam jam-instagram instagram"></span></a>
+                    <a href="" span class="jam jam-linkedin linkedin"></span></a>
+                    <a href="" span class="jam jam-whatsapp whatsapp"></span></a>    
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
