--- a/index.html
+++ b/index.html
@@ -5,38 +5,65 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Estudio Jurídico AM</title>
-    <link rel="stylesheet" href="estilosindex.css">
-    <link rel="icon" href="Imagenes/20210915_212648_0000_preview_rev_1.png">
+    <link rel="icon" href="Imagenes/LOGO-removebg-preview.png">
+    <link rel="stylesheet" href="css/estilosindex.css">
+    <link rel="stylesheet" href="https://unpkg.com/jam-icons/css/jam.min.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&family=Roboto&display=swap');
+        </style>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&family=Roboto&display=swap');
+            </style>
 </head>
-
 <body>
-    <Header> <!-- ENCABEZADO-->
-        <img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" controls height="50" alt="">
-        <h1 class="estudiojuridico">Estudio Jurídico</a></h1>
-        <h2 class="AM">AM</h2>
-        <div>
-            <nav> <!--PANEL DE NAVEGACION-->
-            <a href="index.html">INICIO</a>
-            <a href="estudio.html">ESTUDIO</a>
-            <a href="servicios.html">SERVICIOS</a>
-            <a href="contacto.html">CONTACTO</a>
-            </nav>  
+    <header>
+        <div class="encabezado">
+            <div class="logo_nombre">
+                <a class="nav" href="index.html"><img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" height="43px" width="51px" alt=""></a>
+                <a class="nav" href="index.html"> <span class="nombre_sitio">ESTUDIO JURÍDICO AM</span></a>
+            </div>
+            <div class="panel_nav">
+                <nav>
+                    <ul>
+                        <li><a class="nav" href="index.html">INICIO</a></li>
+                       <li><a class="nav" href="estudio.html">EL ESTUDIO</a></li>
+                       <li><a class="nav" href="servicios.html">SERVICIOS</a></li>
+                       <li><a class="nav" href="contacto.html">CONTACTO</a></li>
+                   </ul>
+               </nav>
+            </div>
         </div>
-    </Header>
-<main>
-</main>
-<footer>
-    <h3 class="visitanos">VISITANOS</h3>
-    <h3 class="llamanos">LLAMANOS</h3>
-    <h3 class="contactanos">CONTACTANOS</h3>
-    <p class="direccion">Ramos Mejía 191, Comodoro Rivadavia,Chubut</p>
-    <p class="celular"> (297) 422-9206</p>
-    <p> <ul class="redes">
-        <li>Instagram </li>
-        <li>Facebook</li>
-        <li>Linkedin</li>
-    </ul>
-    </p>
-</footer>    
+    </header>
+    <main>
+        <section class="hero">
+            <p class="frase">"Cambiar al mundo, mi querido Sancho, no es locura ni utopía, sino justicia"</p>
+            <p class="autor">- Miguel Cervantes</p>
+        </section>
+    </main>
+    <footer>
+        <div class="container_footer">
+            <div class="box_footer1">
+                <h2 class="titulo">Estudio Jurídico AM</h2>
+                <div>
+                    <ul class="navegacion">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="estudio.html">El Estudio</a></li>
+                        <li><a href="servicios.html">Servicios</a></li>
+                        <li></li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box_footer2">
+                <h2 class="titulo">Compartir en</h2>
+                <div class="redes">
+                    <a href="" span class="jam jam-facebook facebook"></span></a>
+                    <a href="" span class="jam jam-twitter twitter"></span></a>
+                    <a href="" span class="jam jam-instagram instagram"></span></a>
+                    <a href="" span class="jam jam-linkedin linkedin"></span></a>
+                    <a href="" span class="jam jam-whatsapp whatsapp"></span></a>    
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html>
