--- a/servicios.html
+++ b/servicios.html
@@ -4,46 +4,80 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Estudio Jurídico AM</title><!--ES LO QUE VEMOS EN LA PESTAÑA DEL NAVEGADOR-->
-    <link rel="icon" href="Imagenes/lawyer-450205_1920 (1).png">
-    <link rel="stylesheet" href="estilosservicios.css">
-    <link rel="icon" href="Imagenes/20210915_212648_0000_preview_rev_1.png">
+    <title>Estudio Jurídico AM</title>
+    <link rel="icon" href="Imagenes/LOGO-removebg-preview.png">
+    <link rel="stylesheet" href="https://unpkg.com/jam-icons/css/jam.min.css">
+    <link rel="stylesheet" href="css/estilosservicios.css">
+    <style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&family=Roboto&display=swap');
+        </style>
+        <style>
+            @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&family=Roboto&display=swap');
+            </style>
 </head>
 <body>
-<Header>
-    <img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" controls height="50" alt="">
-    <h1 class="estudiojuridico">Estudio Jurídico</a></h1>
-    <h2 class="AM">AM</h2>
-<div>
-    <nav>
-        <a href="index.html">INICIO</a>
-        <a href="estudio.html">ESTUDIO</a>
-        <a href="servicios.html">SERVICIOS</a>
-        <a href="contacto.html">CONTACTO</a>
-    </nav>
-</div>
-</Header>
-    <h1 class="servicios">SERVICIOS</h1>
-    <div class="losservicios">
-    <img class="familia" src="Imagenes/derecho de familia.jpg"alt="">
-    <h2 class="textofamilia">DERECHO DE FAMILIA</h2>
-    <img class="sucesiones" src="Imagenes/sucesiones 2.jpg" alt="">
-    <h2 class="textosucesiones">SUCESIONES</h2>
-    <img class="preventiva" src="Imagenes/abogacía preventiva.jpg" alt="">
-    <h2 class="textopreventiva">ABOGACÍA PREVENTIVA</h2>
-</div>     
-<footer>
-    <h3 class="visitanos">VISITANOS</h3>
-    <h3 class="llamanos">LLAMANOS</h3>
-    <h3 class="contactanos">CONTACTANOS</h3>
-    <p class="direccion">Ramos Mejía 191, Comodoro Rivadavia,Chubut</p>
-    <p class="celular"> (297) 422-9206</p>
-    <p> <ul class="redes">
-        <li>Instagram </li>
-        <li>Facebook</li>
-        <li>Linkedin</li>
-    </ul>
-    </p>
-</footer> 
+    <header>
+        <div class="encabezado">
+            <div class="logo_nombre">
+                <a class="nav" href="index.html"><img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" height="43px" width="51px" alt=""></a>
+                <a class="nav" href="index.html"> <span class="nombre_sitio">ESTUDIO JURÍDICO AM</span></a>
+            </div>
+            <div class="panel_nav">
+                <nav>
+                    <ul>
+                        <li><a class="nav" href="index.html">INICIO</a></li>
+                       <li><a class="nav" href="estudio.html">EL ESTUDIO</a></li>
+                       <li><a class="nav" href="servicios.html">SERVICIOS</a></li>
+                       <li><a class="nav" href="contacto.html">CONTACTO</a></li>
+                   </ul>
+               </nav>
+            </div>
+        </div>
+    </header>
+    <main>
+        <h1 class="servicios">SERVICIOS</h1>
+        <section class="seccion_servicios">
+            <div class="derecho_familia">
+                <img src="Imagenes/derecho de familia.jpg" width="100%" height="275px" alt="">
+                <h2 >DERECHO DE FAMILIA</h2>
+            </div>
+            <div class="derecho_sucesorio">
+                <img src="Imagenes/Derecho-de-Sucesiones-1024x683.jpg" width="100%" height="275px" alt="">
+                <h2>SUCESIONES</h2>
+            </div>
+            <div class="abogacia_preventiva">
+                <img src="Imagenes/abogacía preventiva.jpg" width="100%" height="275px" alt="">
+                <h2>ABOGACÍA PREVENTIVA</h2>
+            </div>  
+        </section>
+        <div class="consulta">
+            <a class="boton" href="contacto.html">Realiza tu consulta</a>
+        </div>
+    </main>
+    <footer>
+        <div class="container_footer">
+            <div class="box_footer1">
+                <h2 class="titulo">Estudio Jurídico AM</h2>
+                <div>
+                    <ul class="navegacion">
+                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="estudio.html">El Estudio</a></li>
+                        <li><a href="servicios.html">Servicios</a></li>
+                        <li></li><a href="contacto.html">Contacto</a></li>
+                    </ul>
+                </div>
+            </div>
+            <div class="box_footer2">
+                <h2 class="titulo">Compartir en</h2>
+                <div class="redes">
+                    <a href="" span class="jam jam-facebook facebook"></span></a>
+                    <a href="" span class="jam jam-twitter twitter"></span></a>
+                    <a href="" span class="jam jam-instagram instagram"></span></a>
+                    <a href="" span class="jam jam-linkedin linkedin"></span></a>
+                    <a href="" span class="jam jam-whatsapp whatsapp"></span></a>    
+                </div>
+            </div>
+        </div>
+    </footer>
 </body>
 </html><!--ETIQUETA DE CIERRE-->
