--- a/contacto.html
+++ b/contacto.html
@@ -108,6 +108,10 @@
             <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2777.909085538405!2d-67.50268568442876!3d-45.87312847910791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbde454ee7128d4eb%3A0xe9da7b224baf1ec3!2sRamos%20Mej%C3%ADa%20191%2C%20U9000BSC%20Comodoro%20Rivadavia%2C%20Chubut!5e0!3m2!1ses!2sar!4v1632853465918!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
             </iframe>      
         </section>
+    </section>
+    <section class="fijar">
+        <a class="fijar_boton" href="https://api.whatsapp.com/send?phone=5492974229206> " target="_blank"><span class="jam jam-whatsapp fijar_boton"></span></a>
+    </section>
     </main>
     <footer>
         <div class="container_footer">
@@ -120,16 +124,6 @@
                         <li><a href="servicios.html">Servicios</a></li>
                         <li></li><a href="contacto.html">Contacto</a></li>
                     </ul>
-                </div>
-            </div>
-            <div class="box_footer2">
-                <h2 class="titulo">Compartir en</h2>
-                <div class="redes">
-                    <a href="" span class="jam jam-facebook facebook"></span></a>
-                    <a href="" span class="jam jam-twitter twitter"></span></a>
-                    <a href="" span class="jam jam-instagram instagram"></span></a>
-                    <a href="" span class="jam jam-linkedin linkedin"></span></a>
-                    <a href="" span class="jam jam-whatsapp whatsapp"></span></a>    
                 </div>
             </div>
         </div>
