--- a/estudio.html
+++ b/estudio.html
@@ -26,9 +26,9 @@
                 <nav>
                     <ul>
                         <li><a class="nav" href="index.html">INICIO</a></li>
-                       <li><a class="nav" href="estudio.html">EL ESTUDIO</a></li>
-                       <li><a class="nav" href="servicios.html">SERVICIOS</a></li>
-                       <li><a class="nav" href="contacto.html">CONTACTO</a></li>
+                       <li><a class="nav" href="#el_estudio">EL ESTUDIO</a></li>
+                       <li><a class="nav" href="#sec_servicios">SERVICIOS</a></li>
+                       <li><a class="nav" href="#sec_contacto">CONTACTO</a></li>
                    </ul>
                </nav>
             </div>
@@ -60,16 +60,6 @@
                         <li><a href="servicios.html">Servicios</a></li>
                         <li></li><a href="contacto.html">Contacto</a></li>
                     </ul>
-                </div>
-            </div>
-            <div class="box_footer2">
-                <h2 class="titulo">Compartir en</h2>
-                <div class="redes">
-                    <a href="" span class="jam jam-facebook facebook"></span></a>
-                    <a href="" span class="jam jam-twitter twitter"></span></a>
-                    <a href="" span class="jam jam-instagram instagram"></span></a>
-                    <a href="" span class="jam jam-linkedin linkedin"></span></a>
-                    <a href="" span class="jam jam-whatsapp whatsapp"></span></a>    
                 </div>
             </div>
         </div>        
