--- a/index.html
+++ b/index.html
@@ -17,28 +17,147 @@
 </head>
 <body>
     <header>
-        <div class="encabezado">
-            <div class="logo_nombre">
-                <a class="nav" href="index.html"><img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" height="43px" width="51px" alt=""></a>
-                <a class="nav" href="index.html"> <span class="nombre_sitio">ESTUDIO JURÍDICO AM</span></a>
+            <div class="encabezado">
+                <div class="logo_nombre">
+                    <a class="nav" href="index.html"><img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" height="43px" width="51px" alt=""></a>
+                    <a class="nav" href="index.html"> <span class="nombre_sitio">ESTUDIO JURÍDICO AM</span></a>
+                </div>
+                <div class="panel_nav">
+                    <nav>
+                        <ul>
+                            <li><a class="nav" href="index.html">INICIO</a></li>
+                           <li><a class="nav" href="#el_estudio">EL ESTUDIO</a></li>
+                           <li><a class="nav" href="#sec_servicios">SERVICIOS</a></li>
+                           <li><a class="nav" href="#sec_contacto">CONTACTO</a></li>
+                       </ul>
+                   </nav>
+                </div>
             </div>
-            <div class="panel_nav">
-                <nav>
-                    <ul>
-                        <li><a class="nav" href="index.html">INICIO</a></li>
-                       <li><a class="nav" href="estudio.html">EL ESTUDIO</a></li>
-                       <li><a class="nav" href="servicios.html">SERVICIOS</a></li>
-                       <li><a class="nav" href="contacto.html">CONTACTO</a></li>
-                   </ul>
-               </nav>
-            </div>
-        </div>
     </header>
     <main>
-        <section class="hero">
-            <p class="frase">"Cambiar al mundo, mi querido Sancho, no es locura ni utopía, sino justicia"</p>
-            <p class="autor">- Miguel Cervantes</p>
+        <section class="banner_video">
+            <video class="video" src="Imagenes/pexels-anthony-shkraba-production-8136086.mp4"autoplay muted loop></video>
+            <div class="frase_autor">
+                <p class="frase">ESTUDIO JURÍDICO AM</p>
+                <p class="autor">Asesoría legal</p>
+            </div>
         </section>
+        <section id="el_estudio" class="seccion_estudio">
+            <h1 class="elestudio">EL ESTUDIO</h1>
+            <div class="linea"></div>
+         <section class="seccion">
+             <div class="estudio">
+                <p>El Estudio Jurídico AM ofrece una atención amable y asesoramiento personalizado 
+                    en derecho de familia y sucesiones, siguiendo las necesidades de cada cliente.</p>
+                <h2 class="dra">Dra. Andrea Paola Mansilla</h2>
+                 <p>Abogada egresada de la Universidad de la Patagonia San Juan Bosco con matrícula 
+                    C1255 del Colegio Público de Abogados de Comodoro Rivadavia.</p>
+             </div>
+             <div class="imagen">
+                <img class="abogada" src="Imagenes/abogada.jpg" height="330px" width="500px" alt="">
+             </div>
+         </section>
+        </section>
+        <section class="seccion_general" id="sec_servicios">
+            <h1 class="servicios">SERVICIOS</h1>
+            <div class="linea"></div>
+        <section class="seccion_servicios">
+            <div class="derecho_familia">
+                <img src="Imagenes/derecho de familia.jpg" width="100%" height="275px" alt="">
+                <h2 >DERECHO DE FAMILIA</h2>
+            </div>
+            <div class="derecho_sucesorio">
+                <img src="Imagenes/Derecho-de-Sucesiones-1024x683.jpg" width="100%" height="275px" alt="">
+                <h2>SUCESIONES</h2>
+            </div>
+            <div class="abogacia_preventiva">
+                <img src="Imagenes/abogacía preventiva.jpg" width="100%" height="275px" alt="">
+                <h2>ABOGACÍA PREVENTIVA</h2>
+            </div>  
+        </section>
+        <div class="consulta_boton">
+            <a class="boton" href="contacto.html">Realiza tu consulta</a>
+        </div>
+        </section>
+        <section class="fijar">
+            <a class="fijar_boton" href="https://api.whatsapp.com/send?phone=5492974229206> " target="_blank"><span class="jam jam-whatsapp fijar_boton"></span></a>
+        </section>
+
+        <section class="seccion_contacto" id="sec_contacto">
+            <h1 class="contacto">CONTACTO</h1>
+            <div class="linea"></div>
+            <section class="contacto_formulario">
+                <div class="formulario">
+                    <h2 class="consulta">Envía tu consulta</h2>
+                    <p class="comentarios"> Para preguntas o comentarios por favor llámanos o completa el formulario a continuación:</p>
+                    <form action="validar.php" method="post">
+                        <div>
+                            <label for="Nombre"></label> 
+                            <input class="textos" type="text" required="" name="Nombre" id="Nombre" placeholder="Nombre*">
+                        </div>
+                        <div>
+                            <label for="Apellido"></label>
+                            <input class="textos" type="text" required="" name="Apellido" id="Apellido" placeholder="Apellido*">
+                        </div>
+                        <div>
+                            <label  for="Asunto"></label>
+                            <input class="textos" type="text" required="" name="Asunto" id="Asunto" placeholder="Asunto*">
+                        </div>
+                        <div>
+                            <label for="Telefono"></label>
+                            <input class="textos" type="number" name="Telefono" id="Telefono" placeholder="Teléfono">
+                        </div>
+                        <div>
+                            <label for="Email"></label>
+                            <input class="textos" type="email" required="" name="Email" id="Email" placeholder="Email*">
+                        </div>
+                        <div>
+                            <label class="items" for="Mensaje"></label>
+                            <textarea class="mensaje" required="" name="Mensaje" id="Mensaje" placeholder="Mensaje*" cols="30" rows="10"></textarea>
+                        </div>
+                        <div class="botones">
+                            <input class="boton" type="reset" value="Borrar">
+                            <input class="boton" type="submit" value="Enviar">
+                        </div>
+                    </form>
+                </div>  
+            <div class="datos_contacto">
+                <h2 class="oficina">Oficina</h2>
+                <div class="direccion">
+                    <span class="jam jam-map-marker-f direccion_icono"></span>
+                    <div class="direccion_texto">
+                        <h3>Dirección</h3>
+                        <p>Ramos Mejía 191, Comodoro Rivadavia, Argentina</p>
+                    </div>
+                </div>
+                <div class="direccion">
+                    <span class="jam jam-envelope-f email_icono"></span>
+                    <div class="direccion_texto">
+                        <h3>Email</h3>
+                        <p>andreapmansilla@gmail.com</p>
+                    </div>
+                </div>
+                <div class="direccion">
+                    <span class="jam jam-whatsapp cel_icono"></span>
+                    <div class="direccion_texto">
+                        <h3>Celular</h3>
+                        <p>(0297) 154229206 </p>
+                    </div>
+                </div>
+                <div class="direccion">
+                    <span class="jam jam-clock-f horario_icono"></span>
+                    <div class="direccion_texto">
+                        <h3>Atención de consultas</h3>
+                        <p>Lunes a Viernes de 9 a 17 hs (con cita previa)</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2777.909085538405!2d-67.50268568442876!3d-45.87312847910791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbde454ee7128d4eb%3A0xe9da7b224baf1ec3!2sRamos%20Mej%C3%ADa%20191%2C%20U9000BSC%20Comodoro%20Rivadavia%2C%20Chubut!5e0!3m2!1ses!2sar!4v1632853465918!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
+            </iframe>      
+        </section>
+
     </main>
     <footer>
         <div class="container_footer">
@@ -47,21 +166,14 @@
                 <div>
                     <ul class="navegacion">
                         <li><a href="index.html">Inicio</a></li>
-                        <li><a href="estudio.html">El Estudio</a></li>
-                        <li><a href="servicios.html">Servicios</a></li>
-                        <li></li><a href="contacto.html">Contacto</a></li>
+                        <li><a href="#el_estudio">El Estudio</a></li>
+                        <li><a href="#sec_servicios">Servicios</a></li>
+                        <li></li><a href="#sec_contacto">Contacto</a></li>
                     </ul>
                 </div>
             </div>
-            <div class="box_footer2">
-                <h2 class="titulo">Compartir en</h2>
-                <div class="redes">
-                    <a href="" span class="jam jam-facebook facebook"></span></a>
-                    <a href="" span class="jam jam-twitter twitter"></span></a>
-                    <a href="" span class="jam jam-instagram instagram"></span></a>
-                    <a href="" span class="jam jam-linkedin linkedin"></span></a>
-                    <a href="" span class="jam jam-whatsapp whatsapp"></span></a>    
-                </div>
+            <div>
+                <span class="derechos_reservados"> ©2021 Estudio Jurídico AM</span>
             </div>
         </div>
     </footer>
