--- a/index.html
+++ b/index.html
@@ -12,30 +12,30 @@
         @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Open+Sans:wght@300&family=Roboto&display=swap');
         </style>
         <style>
-            @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&family=Roboto&display=swap');
-            </style>
+        @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans:wght@300&family=Roboto&display=swap');
+        </style>
 </head>
 <body>
     <header>
-            <div class="encabezado">
-                <div class="logo_nombre">
-                    <a class="nav" href="index.html"><img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" height="43px" width="51px" alt=""></a>
-                    <a class="nav" href="index.html"> <span class="nombre_sitio">ESTUDIO JURÍDICO AM</span></a>
-                </div>
-                <div class="panel_nav">
-                    <nav>
-                        <ul>
-                            <li><a class="nav" href="index.html">INICIO</a></li>
-                           <li><a class="nav" href="#el_estudio">EL ESTUDIO</a></li>
-                           <li><a class="nav" href="#sec_servicios">SERVICIOS</a></li>
-                           <li><a class="nav" href="#sec_contacto">CONTACTO</a></li>
-                       </ul>
-                   </nav>
-                </div>
+        <div class="encabezado">
+            <div class="logo_nombre">
+                 <a class="nav" href="#inicio"><img class="logo" src="Imagenes/20210915_212648_0000_preview_rev_1.png" height="43px" width="51px" alt=""></a>
+                 <a class="nav" href="#inicio"> <span class="nombre_sitio">ESTUDIO JURÍDICO AM</span></a>
             </div>
+            <div class="panel_nav">
+                 <nav>
+                    <ul>
+                        <li><a class="nav" href="#inicio">INICIO</a></li>
+                        <li><a class="nav" href="#el_estudio">EL ESTUDIO</a></li>
+                        <li><a class="nav" href="#sec_servicios">SERVICIOS</a></li>
+                        <li><a class="nav" href="#sec_contacto">CONTACTO</a></li>
+                    </ul>
+                 </nav>
+            </div>
+        </div>
     </header>
     <main>
-        <section class="banner_video">
+        <section class="banner_video" id="inicio">
             <video class="video" src="Imagenes/pexels-anthony-shkraba-production-8136086.mp4"autoplay muted loop></video>
             <div class="frase_autor">
                 <p class="frase">ESTUDIO JURÍDICO AM</p>
@@ -165,7 +165,7 @@
                 <h2 class="titulo">Estudio Jurídico AM</h2>
                 <div>
                     <ul class="navegacion">
-                        <li><a href="index.html">Inicio</a></li>
+                        <li><a href="#inicio">Inicio</a></li>
                         <li><a href="#el_estudio">El Estudio</a></li>
                         <li><a href="#sec_servicios">Servicios</a></li>
                         <li></li><a href="#sec_contacto">Contacto</a></li>
