--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
             </div>  
         </section>
         <div class="consulta_boton">
-            <a class="boton" href="contacto.html">Realiza tu consulta</a>
+            <a class="boton" href="#sec_contacto">Realiza tu consulta</a>
         </div>
         </section>
         <section class="fijar">
