--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <nav>
                     <ul>
                         <li><a href="#inicio">INICIO</a></li>
-                        <li><a href="#el_estudio">EL ESTUDIO</a></li>
+                        <li><a href="estudio.html">EL ESTUDIO</a></li>
                         <li><a href="#sec_servicios">SERVICIOS</a></li>
                         <li><a href="#sec_contacto">CONTACTO</a></li>
                     </ul>
@@ -37,7 +37,6 @@
             </div>
         </section>
 
-        <div class="div_vacio" id="el_estudio"></div>
         <section class="seccion_estudio">
             <h1 class="elestudio">EL ESTUDIO</h1>
             <article class="seccion">
@@ -80,11 +79,10 @@
 
         <section class="seccion_contacto" id="sec_contacto">
             <h1 class="contacto">CONTACTO</h1>
-            <div class="linea"></div>
-            <div class="contacto_formulario">
+            <article class="contacto_formulario">
                 <div class="formulario">
                     <h2 class="consulta">Envía tu consulta</h2>
-                    <p class="comentarios">Para preguntas o comentarios por favor llámanos o completa el formulario a continuación:</p>
+                    <p class="comentarios"> Para preguntas o comentarios por favor llámanos o completa el formulario a continuación:</p>
                     <form action="validar.php" method="post">
                         <div>
                             <label for="Nombre"></label> 
@@ -116,41 +114,41 @@
                         </div>
                     </form>
                 </div>  
-            <div class="datos_contacto">
-                <h2 class="oficina">Oficina</h2>
-                <div class="direccion">
-                    <span class="jam jam-map-marker-f direccion_icono"></span>
-                    <div class="direccion_texto">
-                        <h3>Dirección</h3>
-                        <p>Ramos Mejía 191, Comodoro Rivadavia, Argentina</p>
+            
+                <div class="datos_contacto">
+                    <h2 class="oficina">Oficina</h2>
+                    <div class="direccion">
+                        <span class="jam jam-map-marker-f direccion_icono"></span>
+                        <div class="direccion_texto">
+                            <h3>Dirección</h3>
+                            <p>Ramos Mejía 191, Comodoro Rivadavia, Argentina</p>
+                        </div>
+                    </div>
+                    <div class="direccion">
+                        <span class="jam jam-envelope-f email_icono"></span>
+                        <div class="direccion_texto">
+                            <h3>Email</h3>
+                            <p>andreapmansilla@gmail.com</p>
+                        </div>
+                    </div>
+                    <div class="direccion">
+                        <span class="jam jam-whatsapp cel_icono"></span>
+                        <div class="direccion_texto">
+                            <h3>Celular</h3>
+                            <p>(0297) 154229206 </p>
+                        </div>
+                    </div>
+                    <div class="direccion">
+                        <span class="jam jam-clock-f horario_icono"></span>
+                        <div class="direccion_texto">
+                            <h3>Atención de consultas</h3>
+                            <p>Lunes a Viernes de 9 a 17 hs (con cita previa)</p>
+                        </div>
                     </div>
                 </div>
-                <div class="direccion">
-                    <span class="jam jam-envelope-f email_icono"></span>
-                    <div class="direccion_texto">
-                        <h3>Email</h3>
-                        <p>andreapmansilla@gmail.com</p>
-                    </div>
-                </div>
-                <div class="direccion">
-                    <span class="jam jam-whatsapp cel_icono"></span>
-                    <div class="direccion_texto">
-                        <h3>Celular</h3>
-                        <p>(0297) 154229206 </p>
-                    </div>
-                </div>
-                <div class="direccion">
-                    <span class="jam jam-clock-f horario_icono"></span>
-                    <div class="direccion_texto">
-                        <h3>Atención de consultas</h3>
-                        <p>Lunes a Viernes de 9 a 17 hs (con cita previa)</p>
-                    </div>
-                </div>
-            </div>
-        </section>
+            </article>
         <section>
-            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2777.909085538405!2d-67.50268568442876!3d-45.87312847910791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbde454ee7128d4eb%3A0xe9da7b224baf1ec3!2sRamos%20Mej%C3%ADa%20191%2C%20U9000BSC%20Comodoro%20Rivadavia%2C%20Chubut!5e0!3m2!1ses!2sar!4v1632853465918!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy">
-            </iframe>      
+            <iframe class="mapa" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2777.909085538405!2d-67.50268568442876!3d-45.87312847910791!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbde454ee7128d4eb%3A0xe9da7b224baf1ec3!2sRamos%20Mej%C3%ADa%20191%2C%20U9000BSC%20Comodoro%20Rivadavia%2C%20Chubut!5e0!3m2!1ses!2sar!4v1632853465918!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>      
         </section>
     </main>
     <footer>
@@ -166,7 +164,7 @@
                     </ul>
                 </div>
             </div>
-            <div>
+            <div class="derechos_reserv"> 
                 <span class="derechos_reservados"> ©2021 Estudio Jurídico AM</span>
             </div>
         </div>
