--- a/contacto.html
+++ b/contacto.html
@@ -48,28 +48,29 @@
                     <div class="col-12 col-md-6">
                         <h2 class="consulta">Envía tu consulta</h2>
                         <p class="comentarios"> Para preguntas o comentarios por favor llámanos o completa el formulario a continuación:</p>
-                        <form>
+                        <form action="https://formspree.io/f/xqknzbkr" method="POST">
                             <div class="mb-3">
                                 <label for="formGroupExampleInput" class="form-label">Nombre y Apellido</label>
-                                <input type="text" required="" class="form-control" id="formGroupExampleInput" placeholder="">
+                                <input type="text" name="De" required="" class="form-control" id="formGroupExampleInput" placeholder="">
                             </div>
                             <div class="mb-3">
                                 <label for="formGroupExampleInput2" class="form-label">Asunto</label>
-                                <input type="text" required="" class="form-control" id="formGroupExampleInput2" placeholder="">
+                                <input type="text" name="Asunto" required="" class="form-control" id="formGroupExampleInput2" placeholder="">
                             </div>
                             <div class="mb-3">
                               <label for="formGroupExampleInput" class="form-label">Teléfono</label>
-                              <input type="text" class="form-control" id="formGroupExampleInput" placeholder="">
+                              <input type="text" name="Teléfono" class="form-control" id="formGroupExampleInput" placeholder="">
                             </div>
                             <div class="mb-3">
                                 <label for="exampleFormControlInput1" class="form-label">Email</label>
-                                <input type="email" required="" class="form-control" id="exampleFormControlInput1" placeholder="">
+                                <input type="email" name="Mail" required="" class="form-control" id="exampleFormControlInput1" placeholder="">
                             </div>
                             <div class="mb-3">
                                 <label for="exampleFormControlTextarea1"class="form-label">Mensaje</label>
-                                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+                                <textarea name="Mensaje" class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
                             </div>
                             <div class="boton_enviar">
+                            <button type="reset" class="btn btn-primary">Borrar</button>
                             <button type="submit" class="btn btn-primary">Enviar</button>
                             </div>
                         </form>
